test/Programs/InvalidTests/mainMissing/mainMissing.fst
{-
Main function missing, should produce an error
-}

f : Int
f = 2
